# alx-revision

./: CMakeLists.txt
bash_scripting/: 0-bash_arguments  1-bash_arguments  2-bash_arguments  3-bash_arguments
doubly_linked_lists/: create.c  create_list  create_list.c  main.h
dynamic_libraries/: add.c  main  main.c  main.h  sub.c
fabric/: 1-install_load_balancer  fabfile.py  text.txt
flask/: activate
hash_table/: 0-hash_table_create.c  a  hash_tables.h
learn_doubly_linked_list/: add_node_at_beg_with_return.c  add_node_at_beg_without_return.c  add_node_at_end.c  add_node_at_pos.c  count_nodes.c  create_linked_list_one  create_linked_list_one.c  create_linked_list_two  create_linked_list_two.c  create_node  create_node.c  del_node_all.c  del_node_at_beg.c  del_node_at_end.c  del_node_at_end_sp.c  del_node_at_pos.c  lists.h  main  main.c  print_node_data.c  reverse_list.c
learn_singly_linked_list/: .del_node_at_end.c.swp  add_node_at_beg.c  add_node_at_beg_with_return.c  add_node_at_beg_without_return.c  add_node_at_end.c  add_node_at_pos.c  count_nodes.c  create_linked_list_one  create_linked_list_one.c  create_linked_list_two  create_linked_list_two.c  create_node  create_node.c  del_node_at_beg.c  del_node_at_end.c  del_node_at_end_sp.c  del_node_at_pos.c  lists.h  main  main.c  print_node_data.c  reverse_list.c
makefiles/: 0-Makefile  Makefile
more_singly_linked_lists/: 0-print_listint.c  1-listint_len.c  2-add_nodeint.c  3-add_nodeint_end.c  4-free_listint.c  5-free_listint2.c  a  b  c  d  e  f  lists.h
my_printf/: _printf.c  main.c  main.h  printf  printf_functions.c
my_simple_shell/: _which.c  a.c  delim.c  env_environ.c  execve.c  fork.c  fork_wait_execve.c  main_shell  main_shell.c  myshell.c  prompt.c  read_str.c  shell  shell.c  stat.c  t_shell.c  test.c  test_shell  test_shell.c  testshell.c  tshell.c  twhich.c  type.c  wait.c  write_str.c  write_str_low.c
orm/: 0-select_states.py  1-sqlalchemy.py
python/: .roman_to_arabic.py.swp  age.py  age_msg.py  cal.py  calc.py  conv.py  converter.py  ehandle.py  info.py  investment.py  lambda.py  loop_func.py  map_function.py  name.py  odd_num.py  pattern.py  pattern1.py  pattern2.py  pattern3.py  simple_calc.py  test.py  tree.py  tree_test.py
python_networks/: google.html  test.py  test0.py  test1.py  test2.py  test3.py  test4.py  test5.py  test6.py
scripting/: add  args  args_calculator  comparison  div  eq  file.txt  for_loop  input  loop_words  name  read_file  var_scope  while_loop
search_algo/: 0-linear.c  0-main.c  1-binary.c  1-main.c  binary  linear  search_algos.h
shell/: .shell.h.swp  README.md  _getenv.c  built_in.c  env.c  execute_1.c  hsh  main.c  parse.c  prompt.c  (+3 more)
(+170 files in other folders)
