cmake_minimum_required(VERSION 3.26)
project(alx_revision C)

set(CMAKE_C_STANDARD 11)

include_directories(doubly_linked_lists)
include_directories(more_singly_linked_lists)
include_directories(my_printf)
include_directories(simple_shell)
include_directories(singly_linked_lists)

add_executable(alx_revision
        doubly_linked_lists/create.c
        doubly_linked_lists/main.h
        more_singly_linked_lists/0-main.c
        more_singly_linked_lists/0-print_listint.c
        more_singly_linked_lists/1-listint_len.c
        more_singly_linked_lists/1-main.c
        more_singly_linked_lists/2-add_nodeint.c
        more_singly_linked_lists/2-main.c
        more_singly_linked_lists/3-add_nodeint_end.c
        more_singly_linked_lists/3-main.c
        more_singly_linked_lists/4-free_listint.c
        more_singly_linked_lists/4-main.c
        more_singly_linked_lists/5-free_listint2.c
        more_singly_linked_lists/5-main.c
        more_singly_linked_lists/lists.h
        my_printf/_printf.c
        my_printf/_putchar.c
        my_printf/main.c
        my_printf/main.h
        my_printf/printf_functions.c
        my_simple_shell/_which.c
        my_simple_shell/a.c
        my_simple_shell/delim.c
        my_simple_shell/env_environ.c
        my_simple_shell/execve.c
        my_simple_shell/fork.c
        my_simple_shell/fork_wait_execve.c
        my_simple_shell/main_shell.c
        my_simple_shell/myshell.c
        my_simple_shell/prompt.c
        my_simple_shell/read_str.c
        my_simple_shell/shell.c
        my_simple_shell/stat.c
        my_simple_shell/t_shell.c
        my_simple_shell/test.c
        my_simple_shell/test_shell.c
        my_simple_shell/testshell.c
        my_simple_shell/tshell.c
        my_simple_shell/twhich.c
        my_simple_shell/type.c
        my_simple_shell/wait.c
        my_simple_shell/write_str.c
        my_simple_shell/write_str_low.c
        simple_shell/linkedlist.c
        simple_shell/main.c
        simple_shell/main.h
        singly_linked_lists/0-main.c
        singly_linked_lists/0-print_list.c
        singly_linked_lists/1-list_len.c
        singly_linked_lists/1-main.c
        singly_linked_lists/100-first.c
        singly_linked_lists/100-main.c
        singly_linked_lists/2-add_node.c
        singly_linked_lists/2-main.c
        singly_linked_lists/3-add_node_end.c
        singly_linked_lists/3-main.c
        singly_linked_lists/4-free_list.c
        singly_linked_lists/4-main.c
        singly_linked_lists/_putchar.c
        singly_linked_lists/lists.h
        sorting_algorithm/bubble_sort.c)
